--- a/index.html
+++ b/index.html
@@ -9,24 +9,14 @@
 
   <body>
     <div class="cards">
-      <div class="card" data-description="Wes is cool">
-        <img src="https://picsum.photos/200" alt="Wes Bos" />
-        <h2>Wes Bos</h2>
+      <div class="card" data-description="Abhay is cool">
+        <img src="https://picsum.photos/200" alt="Abhay Vats" />
+        <h2>Abhay Vats</h2>
         <button>Learn more →</button>
       </div>
-      <div class="card" data-description="Scott is neat!">
-        <img src="https://picsum.photos/200" alt="Wes Bos" />
-        <h2>Scott Tolinski</h2>
-        <button>Learn more →</button>
-      </div>
-      <div class="card" data-description="Kait is beautiful!">
-        <img src="https://picsum.photos/200" alt="Wes Bos" />
-        <h2>Kait Bos</h2>
-        <button>Learn more →</button>
-      </div>
-      <div class="card" data-description="Snickers is a dog!">
-        <img src="https://picsum.photos/200" alt="Wes Bos" />
-        <h2>Snickers the dog</h2>
+      <div class="card" data-description="Piyush is neat!">
+        <img src="https://picsum.photos/200" alt="Piyush Kapoor" />
+        <h2>Piyush Kapoor</h2>
         <button>Learn more →</button>
       </div>
     </div>
