Refactor to add/remove only outer modal class

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         color: black;
       }
 
-      .modal-inner.open {
+      .modal-outer.modal-outer.open .modal-inner {
         transform: translateY(0);
       }
     </style>
